--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 My solutions to Advent of Code 2022
 
-Solutions are both for Rust and PowerShell.
+Solutions are mostly in Python and sometimes in Rust and PowerShell for fun.
